GGB-2047 + GGB-2072 change teal colors to fix contrast ratio
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@56334 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/html/app-header.css
+++ b/web/src/main/resources/org/geogebra/web/resources/html/app-header.css
@@ -40,7 +40,7 @@
 	margin-bottom: 10px;
 }
 .GeoGebraHeader a{
-	color: #00A8A8;
+	color: #008475;
     text-decoration: none;
     padding: 0px 8px;
     margin-left: 5px;
