--- a/web/src/main/resources/org/geogebra/web/resources/scss/colors.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/colors.scss
@@ -8,9 +8,12 @@ $carrot-light: #EA9143;
 $carrot-default: #E67E22;
 $carrot-dark: #DB6114;
 // TEAL
-$teal-light: #59DAD9;
-$teal-default: #00A8A8;
-$teal-dark: #008475;
+$teal-light: #4cb4a4;
+/* #59DAD9;*/
+$teal-default: #008475;
+/* #00A8A8;*/
+$teal-dark: #006758;
+/*#008475;*/
 
 
 $black: #000000;
@@ -27,7 +30,7 @@ $button-border: rgb(169, 169, 169);
 $marble-border: #ccccff;
 $selected-menuitem-background: #eeeeee;
 $zoomBtnBckg: #525659;/*#777*/
-$snackbar-background: #303030;
+$snackbar-background: #323232;
 
 $white: rgb(255, 255, 255);
 $white-30: rgba(255, 255, 255, 0.3);
