--- a/web/src/main/resources/org/geogebra/web/resources/scss/snackbar.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/snackbar.scss
@@ -34,7 +34,7 @@
 			float: right;
 			cursor: pointer;
 			font-size: 14px;
-			color: $teal-default;
+			color: $teal-light;
 		}
 	
 		.warning{
